      triggers "django-package-does-not-depend-on-django".

  * data/fields/name_section_mappings:
    + [CL] Apply patch from Simon McVittie to prevent a misdetection of
      libcanberra-gstreamer as a GNU Smalltalk library.  (Closes: #880140)
  * data/spelling/corrections:
    + [AB] Add more misspellings of the word "dependency".

  * vendors/ubuntu/main/data/changes-file/known-dists:
    + [CL] Add bionic as known Ubuntu distribution. Thanks Jeremy Bicha!
      (Closes: #880115)

 -- Chris Lamb <lamby@debian.org>  Sun, 29 Oct 2017 12:17:12 +0000

lintian (2.5.57) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - debian-rules-should-not-set-CFLAGS-from-noopt

  * checks/control-file.pm:
    + [CL] Avoid false positives in debian-control-has-empty-field when the
      field is wrapped onto a new line. Thanks to Mattia Rizzolo for the
      report.  (Closes: #879977)
  * checks/cruft.desc:
    + [CL] Add example on how to remove trailing whitespace with sed.
    + [CL] Drop README.source from files to check against the
      file-contains-trailing-whitespace tag as it can include quotes
      from upstream that would be ideally left intact.
  * checks/debhelper.pm:
    + [NT] Remove code handling named compat levels.
  * checks/files.desc:
    + [CL] Ignore embedded jQuery libraries for Doxygen.  (Closes: #736360)
  * checks/rules.desc:
    + [CL] Warn if packages set CFLAGS if the value of DEB_BUILD_OPTIONS
      contains noopt.  (Closes: #718640)

  * commands/lintian.pm:
    + [NT] Have lintian resignal between various stages of the
      processing.  Previously, ill-timed signals would be caught and
      "semi-ignored" with lintian happily continuing to process the
      next package.  (Closes: #878575)

  * data/debhelper/named-compat-levels:
    + [NT] Removed; no longer used.

 -- Chris Lamb <lamby@debian.org>  Sun, 29 Oct 2017 12:14:30 +0000

lintian (2.5.56) unstable; urgency=medium

  * Summary of tag changes:
    + Added: